trigger nudges on components
Signed-off-by: Mario Fernandez <mariofer@redhat.com>

--- a/Dockerfile.ui-distributed-tracing
+++ b/Dockerfile.ui-distributed-tracing
@@ -4,6 +4,8 @@ WORKDIR /opt/app-root
 
 USER 0
 
+# Build
+
 ENV HUSKY=0
 COPY ui-distributed-tracing/web/package*.json web/
 COPY ui-distributed-tracing/Makefile Makefile
