--- a/Dockerfile.ui-troubleshooting-panel
+++ b/Dockerfile.ui-troubleshooting-panel
@@ -4,6 +4,8 @@ WORKDIR /opt/app-root
 
 USER 0
 
+# build
+
 ENV HUSKY=0
 COPY ui-troubleshooting-panel/web/package*.json web/
 COPY ui-troubleshooting-panel/Makefile Makefile
