--- a/Dockerfile-4.15.catalog
+++ b/Dockerfile-4.15.catalog
@@ -1,6 +1,8 @@
 # The base image is expected to contain /bin/opm (with a serve subcommand) and /bin/grpc_health_probe
 FROM registry.redhat.io/openshift4/ose-operator-registry-rhel9:v4.15
 
+# build 
+
 ENTRYPOINT ["/bin/opm"]
 CMD ["serve", "/configs", "--cache-dir=/tmp/cache"]
 
