--- a/Dockerfile-4.18.catalog
+++ b/Dockerfile-4.18.catalog
@@ -2,8 +2,7 @@
 # TODO migrate to this once available FROM registry.redhat.io/openshift4/ose-operator-registry-rhel9:v4.18
 FROM brew.registry.redhat.io/rh-osbs/openshift-ose-operator-registry-rhel9:v4.18
 
-# build
-
+# build component
 ENTRYPOINT ["/bin/opm"]
 CMD ["serve", "/configs", "--cache-dir=/tmp/cache"]
 
