--- a/.tekton/cluster-observability-operator-bundle-pull-request.yaml
+++ b/.tekton/cluster-observability-operator-bundle-pull-request.yaml
@@ -8,8 +8,12 @@ metadata:
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/cancel-in-progress: "true"
     pipelinesascode.tekton.dev/max-keep-runs: "3"
-    pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch
-      == "release-1.0"
+    pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch == "release-1.0" &&
+      (".tekton/cluster-observability-operator-bundle-pull-request.yaml".pathChanged() ||
+      ".tekton/cluster-observability-operator-bundle-push.yaml".pathChanged() ||
+      "Dockerfile.bundle".pathChanged() ||
+      "bundle-patches/*".pathChanged() ||
+      "observability-operator".pathChanged())
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: cluster-observability-operator-1-0
@@ -24,7 +28,7 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/redhat-user-workloads/cluster-observabilit-tenant/cluster-observability-operator/cluster-observability-operator-bundle:on-pr-{{revision}}
+    value: quay.io/redhat-user-workloads/cluster-observabilit-tenant/cluster-observability-operator-bundle:on-pr-{{revision}}
   - name: image-expires-after
     value: 5d
   - name: dockerfile
@@ -114,7 +118,7 @@ spec:
       description: Image tag expiration time, time values could be something like
         1h, 2d, 3w for hours, days, and weeks, respectively.
       name: image-expires-after
-    - default: "false"
+    - default: "true"
       description: Build a source image.
       name: build-source-image
       type: string
