--- a/.tekton/coo-fbc-v4-13-push.yaml
+++ b/.tekton/coo-fbc-v4-13-push.yaml
@@ -6,7 +6,7 @@ metadata:
     build.appstudio.redhat.com/commit_sha: '{{revision}}'
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
-    pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch == "main" &&
+    pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch == "release-1.0" &&
       (".tekton/coo-fbc-v4-13-pull-request.yaml".pathChanged() ||
       ".tekton/coo-fbc-v4-13-push.yaml".pathChanged() ||
       "Dockerfile-4.13.catalog".pathChanged() ||
