--- a/Dockerfile.cluster-health-analyzer
+++ b/Dockerfile.cluster-health-analyzer
@@ -1,14 +1,14 @@
 FROM brew.registry.redhat.io/rh-osbs/openshift-golang-builder:rhel_9_1.23 as builder
 ARG TARGETARCH
 
-WORKDIR /src
-COPY go.mod go.mod
-COPY go.sum go.sum
+WORKDIR /workspace
+COPY cluster-health-analyzer/go.mod go.mod
+COPY cluster-health-analyzer/go.sum go.sum
 RUN go mod download
 
-COPY cmd cmd
-COPY pkg pkg
-COPY main.go main.go
+COPY cluster-health-analyzer/cmd cmd
+COPY cluster-health-analyzer/pkg pkg
+COPY cluster-health-analyzer/main.go main.go
 
 ENV GOOS=${TARGETOS:-linux}
 ENV GOARCH=${TARGETARCH}
@@ -20,7 +20,7 @@ RUN go build -tags strictfipsruntime -o /bin/cluster-health-analyzer
 FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 
 WORKDIR /
-COPY --from=builder /bin/cluster-health-analyzer /bin/cluster-health-analyzer
+COPY --from=builder /workspace/bin/cluster-health-analyzer /bin/cluster-health-analyzer
 USER 65532:65532
 
 ENTRYPOINT ["/bin/cluster-health-analyzer", "serve"]
