--- a/.tekton/obo-prometheus-operator-prometheus-config-reloader-1-1-pull-request.yaml
+++ b/.tekton/obo-prometheus-operator-prometheus-config-reloader-1-1-pull-request.yaml
@@ -9,7 +9,7 @@ metadata:
     pipelinesascode.tekton.dev/cancel-in-progress: "true"
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-cel-expression: |-
-      event == "push" && target_branch == "release-1.1" &&
+      event == "pull_request" && target_branch == "release-1.1" &&
           (".tekton/obo-prometheus-operator-prometheus-config-reloader-1-1-pull-request.yaml".pathChanged() ||
           ".tekton/obo-prometheus-operator-prometheus-config-reloader-1-1-push.yaml".pathChanged() ||
           "Dockerfile.prometheus-config-reloader".pathChanged() ||
