--- a/.tekton/cluster-observability-operator-bundle-1-1-push.yaml
+++ b/.tekton/cluster-observability-operator-bundle-1-1-push.yaml
@@ -7,8 +7,12 @@ metadata:
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/cancel-in-progress: "false"
     pipelinesascode.tekton.dev/max-keep-runs: "3"
-    pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch
-      == "release-1.1"
+    pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch == "release-1.1" &&
+      (".tekton/cluster-observability-operator-bundle-pull-request.yaml".pathChanged() ||
+      ".tekton/cluster-observability-operator-bundle-push.yaml".pathChanged() ||
+      "Dockerfile.bundle".pathChanged() ||
+      "bundle-patches/*".pathChanged() ||
+      "observability-operator".pathChanged())
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: cluster-observability-operator-1-1
