--- a/.tekton/cluster-observability-operator-bundle-1-1-pull-request.yaml
+++ b/.tekton/cluster-observability-operator-bundle-1-1-pull-request.yaml
@@ -9,10 +9,10 @@ metadata:
     pipelinesascode.tekton.dev/cancel-in-progress: "true"
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch == "release-1.1" &&
-      (".tekton/cluster-observability-operator-bundle-pull-request.yaml".pathChanged() ||
-      ".tekton/cluster-observability-operator-bundle-push.yaml".pathChanged() ||
+      (".tekton/cluster-observability-operator-bundle-1-1-pull-request.yaml".pathChanged() ||
+      ".tekton/cluster-observability-operator-bundle-1-1-push.yaml".pathChanged() ||
       "Dockerfile.bundle".pathChanged() ||
-      "bundle-patches/*".pathChanged() ||
+      "bundle-patches/***".pathChanged() ||
       "observability-operator".pathChanged())
   creationTimestamp: null
   labels:
