--- a/.tekton/logging-console-plugin-6-1-1-1-pull-request.yaml
+++ b/.tekton/logging-console-plugin-6-1-1-1-pull-request.yaml
@@ -42,6 +42,10 @@ spec:
       value: Dockerfile.ui-logging
     - name: path-context
       value: .
+    - name: hermetic
+      value: "true"
+    - name: prefetch-input
+      value: '[{"type": "gomod", "path": "."}, {"type": "npm", "path":"./web"}]'
     - name: build-source-image
       value: "true"
   pipelineSpec:
