--- a/.gitmodules
+++ b/.gitmodules
@@ -49,7 +49,7 @@
 [submodule "perses"]
 	path = perses
 	url = https://github.com/perses/perses.git
-	branch = release-coo-1.1
+	branch = release-0.50.1
 [submodule "cluster-health-analyzer"]
 	path = cluster-health-analyzer
 	url = https://github.com/openshift/cluster-health-analyzer
