--- a/.gitmodules
+++ b/.gitmodules
@@ -54,3 +54,11 @@
 	path = cluster-health-analyzer
 	url = https://github.com/openshift/cluster-health-analyzer
 	branch = release-0.4
+[submodule "ui-logging-pf4"]
+	path = ui-logging-pf4
+	url = https://github.com/openshift/logging-view-plugin.git
+	branch = release-6.0
+[submodule "ui-distributed-tracing-pf4"]
+	path = ui-distributed-tracing-pf4
+	url = https://github.com/openshift/distributed-tracing-console-plugin.git
+	branch = release-0.3
