--- a/.tekton/logging-console-plugin-6-1-1-1-pull-request.yaml
+++ b/.tekton/logging-console-plugin-6-1-1-1-pull-request.yaml
@@ -10,8 +10,8 @@ metadata:
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-cel-expression: |-
       event == "pull_request" && target_branch == "release-1.1" &&
-          (".tekton/ogging-console-plugin-6-1-1-1-pull-request.yaml".pathChanged() ||
-          ".tekton/ogging-console-plugin-6-1-1-1-push.yaml".pathChanged() ||
+          (".tekton/logging-console-plugin-6-1-1-1-pull-request.yaml".pathChanged() ||
+          ".tekton/logging-console-plugin-6-1-1-1-push.yaml".pathChanged() ||
           "Dockerfile.ui-logging".pathChanged() ||
           "ui-logging".pathChanged())
     build.appstudio.openshift.io/build-nudge-files: bundle-patches/render_templates
@@ -45,7 +45,7 @@ spec:
     - name: hermetic
       value: "true"
     - name: prefetch-input
-      value: '[{"type": "gomod", "path": "."}, {"type": "npm", "path":"./web"}]'
+      value: '[{"type": "gomod", "path": "./ui-logging"}, {"type": "npm", "path":"./ui-logging/web"}]'
     - name: build-source-image
       value: "true"
   pipelineSpec:
