--- a/Dockerfile.ui-logging-pf4
+++ b/Dockerfile.ui-logging-pf4
@@ -5,26 +5,26 @@ WORKDIR /opt/app-root
 USER 0
 
 ENV HUSKY=0
-COPY ui-logging/web/package*.json web/
-COPY ui-logging/Makefile Makefile
+COPY ui-logging-pf4/web/package*.json web/
+COPY ui-logging-pf4/Makefile Makefile
 RUN make install-frontend-ci-clean
 
-COPY ui-logging/web/ web/
+COPY ui-logging-pf4/web/ web/
 RUN make build-frontend
 
 FROM brew.registry.redhat.io/rh-osbs/openshift-golang-builder:rhel_9_1.22 as go-builder
 
 WORKDIR /opt/app-root
 
-COPY ui-logging/Makefile Makefile
-COPY ui-logging/go.mod go.mod
-COPY ui-logging/go.sum go.sum
+COPY ui-logging-pf4/Makefile Makefile
+COPY ui-logging-pf4/go.mod go.mod
+COPY ui-logging-pf4/go.sum go.sum
 
 RUN make install-backend
 
-COPY ui-logging/config/ config/
-COPY ui-logging/cmd/ cmd/
-COPY ui-logging/pkg/ pkg/
+COPY ui-logging-pf4/config/ config/
+COPY ui-logging-pf4/cmd/ cmd/
+COPY ui-logging-pf4/pkg/ pkg/
 
 ENV GOEXPERIMENT=strictfipsruntime
 ENV CGO_ENABLED=1
@@ -34,19 +34,19 @@ RUN make build-backend BUILD_OPTS="-tags strictfipsruntime"
 FROM registry.redhat.io/rhel9-4-els/rhel:9.4
 
 RUN mkdir /licenses
-COPY ui-logging/LICENSE /licenses/.
+COPY ui-logging-pf4/LICENSE /licenses/.
 
 USER 1001
 
 COPY --from=web-builder /opt/app-root/web/dist /opt/app-root/web/dist
 COPY --from=go-builder /opt/app-root/plugin-backend /opt/app-root
-COPY ui-logging/config /opt/app-root/config
+COPY ui-logging-pf4/config /opt/app-root/config
 
 ENTRYPOINT ["/opt/app-root/plugin-backend", "-config-path", "/opt/app-root/config", "-static-path", "/opt/app-root/web/dist"]
 
 LABEL com.redhat.component="coo-logging-console-plugin" \
       name="openshift/logging-console-plugin" \
-      version="v6.1.0" \
+      version="v6.0.0" \
       summary="OpenShift console plugin to view and explore logs" \
       io.openshift.tags="openshift,observability-ui,logging" \
       io.k8s.display-name="OpenShift console logging plugin" \
