--- a/Dockerfile.perses
+++ b/Dockerfile.perses
@@ -34,6 +34,8 @@ COPY --from=build-env --chown=nobody:nobody /app/bin/percli                     
 COPY --from=build-env --chown=nobody:nobody /app/LICENSE                            /bin/LICENSE
 COPY --from=build-env --chown=nobody:nobody /app/plugins-archive/                   /etc/perses/plugins-archive/
 COPY --from=build-env --chown=nobody:nobody /app/docs/examples/config.docker.yaml   /etc/perses/config.yaml
+COPY --from=build-env --chown=nobody:nobody /app/cue/schemas                    /etc/perses/cue/schemas
+COPY --from=build-env --chown=nobody:nobody /app/cue.mod                            /etc/perses/cue.mod
 COPY --from=build-env --chown=nobody:nobody /app/LICENSE                            /LICENSE
 COPY --from=build-env --chown=nobody:nobody /etc/mime.types                         /etc/mime.types
 
