--- a/Dockerfile.perses
+++ b/Dockerfile.perses
@@ -44,5 +44,4 @@ WORKDIR /perses
 EXPOSE     8080
 VOLUME     ["/perses"]
 ENTRYPOINT [ "/bin/perses" ]
-CMD        ["--config=/etc/perses/config.yaml", \
-    "--log.level=error"]
+CMD        ["--config=/etc/perses/config.yaml", "--log.level=error"]
