enhance: update Dockerfile.perses with "--ignore-scripts" flag for npm install
Signed-off-by: Jenny Zhu <jenny.a.zhu@gmail.com>

--- a/Dockerfile.perses
+++ b/Dockerfile.perses
@@ -7,7 +7,7 @@ COPY perses/ui ui
 
 USER 0
 
-RUN make build-ui
+RUN make build-ui NPM_INSTALL_FLAGS="--ignore-scripts"
 
 FROM brew.registry.redhat.io/rh-osbs/openshift-golang-builder:rhel_8_golang_1.23 AS build-env
 USER root
