--- a/.tekton/perses-operator-0-1-1-1-pull-request.yaml
+++ b/.tekton/perses-operator-0-1-1-1-pull-request.yaml
@@ -43,7 +43,7 @@ spec:
     - name: path-context
       value: .
     - name: prefetch-input
-      value: '[{"type": "gomod", "path": "./perses-operator"}'
+      value: '[{"type": "gomod", "path": "./perses-operator"}]'
     - name: build-source-image
       value: "true"
   pipelineSpec:
