--- a/.tekton/perses-operator-0-1-1-1-push.yaml
+++ b/.tekton/perses-operator-0-1-1-1-push.yaml
@@ -42,7 +42,7 @@ spec:
     - name: hermetic
       value: "true"
     - name: prefetch-input
-      value: '[{"type": "gomod", "path": "./perses-operator"}'
+      value: '[{"type": "gomod", "path": "./perses-operator"}]'
     - name: build-source-image
       value: "true"
   pipelineSpec:
